examples/test/testpolicy18565.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18565
  namespace: namespace337
spec:
  podSelector:
    matchLabels:
      key27: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value9
          key24: value48
          key17: value46
      podSelector:
        matchLabels:
          key41: value30
